--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/jwt": "10.0.3",
     "@nestjs/mongoose": "9.2.2",
     "@nestjs/platform-express": "9.0.0",
+    "@nestjs/swagger": "7.1.17",
     "bcrypt": "5.1.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
@@ -55,7 +56,7 @@
     "ts-loader": "9.2.3",
     "ts-node": "10.0.0",
     "tsconfig-paths": "4.2.0",
-    "typescript": "5.0.0"
+    "typescript": "^4.3.5"
   },
   "jest": {
     "moduleFileExtensions": [
