--- a/package.json
+++ b/package.json
@@ -20,24 +20,24 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "9.0.0",
-    "@nestjs/config": "2.3.2",
-    "@nestjs/core": "9.0.0",
-    "@nestjs/jwt": "10.0.3",
-    "@nestjs/mongoose": "9.2.2",
-    "@nestjs/platform-express": "9.0.0",
-    "@nestjs/swagger": "7.1.17",
+    "@nestjs/common": "10.3.0",
+    "@nestjs/config": "3.1.1",
+    "@nestjs/core": "10.3.0",
+    "@nestjs/jwt": "10.2.0",
+    "@nestjs/mongoose": "10.0.2",
+    "@nestjs/platform-express": "10.3.0",
+    "@nestjs/swagger": "7.2.0",
     "bcrypt": "5.1.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
-    "mongoose": "7.2.3",
+    "mongoose": "^7.6.8",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.2.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "9.0.0",
-    "@nestjs/schematics": "9.0.0",
-    "@nestjs/testing": "9.0.0",
+    "@nestjs/cli": "10.3.0",
+    "@nestjs/schematics": "10.1.0",
+    "@nestjs/testing": "10.3.0",
     "@types/bcrypt": "5.0.0",
     "@types/express": "4.17.13",
     "@types/jest": "29.5.1",
